# msp430fr5994-examples-cmake

./: CMakeLists.txt  LICENSE  README.md  msp430-toolchain.cmake
Blinky/: CMakeLists.txt  main.c
LPM35/: CMakeLists.txt
RFM95/: CMakeLists.txt  base64.c  main.c  mcu.c  spi.c  spi.h  sx1276.c
Test/: CMakeLists.txt  main.c
Test_LPM35/: CMakeLists.txt  main.c
Test_Si7021/: CMakeLists.txt  main.c
Timer/: CMakeLists.txt  main.c
Tools/: CMakeLists.txt
Tools/Serial/: serial.c  serial.h
Tools/Si7021/: i2c_driver.c  i2c_driver.h  si7021.c  si7021.h
